<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

<ImageView
android:id="@+id/imageView"
android:layout_width="180dp"
android:layout_height="240dp"
android:layout_marginTop="30dp"
    android:elevation="8dp"
    android:padding="10dp"
    android:scaleType="fitCenter"
    android:contentDescription="@string/todo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/button"
    app:srcCompat="@drawable/spin" />

    <!-- Spin Button with Vibrant Styling -->
<Button
android:id="@+id/button"
android:layout_width="wrap_content"
android:layout_height="60dp"
android:onClick="Spin"
android:text="@string/spin"
android:textColor="@color/white"
android:textStyle="bold"
android:textSize="18sp"
android:backgroundTint="@color/colorAccent"
android:paddingHorizontal="24dp"
android:paddingVertical="12dp"
app:layout_constraintBottom_toTopOf="@id/linearLayout"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/imageView"
tools:ignore="OnClick,TextSizeCheck" />

<LinearLayout
android:id="@+id/linearLayout"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:paddingHorizontal="16dp"
android:gravity="center"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintTop_toBottomOf="@id/button">

<Button
    android:id="@+id/btn1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_margin="8dp"
    android:text="@string/truth"
    android:textColor="@color/white"
    android:backgroundTint="@color/colorPrimary"
    android:textStyle="bold"
    android:textSize="16sp" />

<Button
    android:id="@+id/btn2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:layout_margin="8dp"
    android:text="@string/dare"
    android:textColor="@color/white"
    android:backgroundTint="@color/colorPrimary"
    android:textStyle="bold"
    android:textSize="16sp" />
</LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
